tests/cases/compiler-development/artifact/errors/diagnostic-c-header-target-aggregate-by-value.diagnostic
diagnostic error code=A0001 family=abi message="C header emission for by-value parameter ApiPair is currently supported only on 64-bit Unix targets; use ptr ApiPair for a stable ABI on target 'x86_64-pc-windows-msvc'" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/ffi/errors/c-header-target-aggregate-by-value.ari" display="tests/cases/ffi/errors/c-header-target-aggregate-by-value.ari" bytes=161
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/c-header-target-aggregate-by-value.ari" line=8 column=8 end_line=8 end_column=17 byte_start=92 byte_end=101 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/c-header-target-aggregate-by-value.ari:8:8\n   |\n 8 | pub fn take_pair(pair: ApiPair) -> i64 {\n   |        ^^^^^^^^^"
  Note index=0 location=none message="C header generation emits Ari's supported C ABI contract and cannot promise target-specific aggregate calling rules for this target"
  Help index=0 location=none message="pass ptr ApiPair or emit the header for a supported 64-bit Unix target"
